# functionapproximation

./: Dockerfile  Feed-Forward_NN.ipynb  README.md  Recurent _NN.ipynb  datagenerator.ipynb  feed_forward.py  functions.py  functions_visualization.ipynb  notebook.ipynb  notebook.py  noteboook copy.ipynb  noteboook.ipynb  pyproject.toml  requirements.txt  training.py  utils.py
.ipynb_checkpoints/: Recurent _NN-checkpoint.ipynb  data_generator-checkpoint.ipynb  noteboook-checkpoint.ipynb
datasets/: f0_dataset.csv  f1_dataset.csv  f2_dataset.csv  f3_dataset.csv  f4_dataset.csv
src/: data_generator.ipynb  functions_visualization.ipynb  recurrent.py  requirements.txt  training.py
