[tool.poetry]
name = "zama_challenge"
version = "0.1.0"
description = ""
authors = ["cheikh42 <cheikhmalaininec@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
torch = "^1.10.1"
pandas = "^1.4.0"
matplotlib = "^3.5.1"
numpy = "1.22.0"
scikit-learn = "^1.0.2"

[tool.poetry.dev-dependencies]
tqdm = "^4.62.3"
jupyter = "^1.0.0"
pytest = "^6.2.5"
unittest = "^0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
